fix: block icon shrinking when a title is too long

--- a/src/global.scss
+++ b/src/global.scss
@@ -57,3 +57,7 @@ ion-header ion-img {
     top: 0;
     bottom: 0;
 }
+
+ion-icon {
+    min-width: 1em;
+}
